k8s/debug-pod-awscli.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-secret-access-awscli
  namespace: techchallenge
spec:
  serviceAccountName: default
  containers:
  - name: awscli
    image: amazon/aws-cli:latest
    command: ["sleep", "3600"]
  restartPolicy: Never
