k8s/debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-secret-access
  namespace: techchallenge
spec:
  serviceAccountName: default
  containers:
  - name: busybox
    image: public.ecr.aws/docker/library/busybox:latest
    command: ["sleep", "3600"]
  restartPolicy: Never
