k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-app-deployment
  labels:
    app.kubernetes.io/name: techchallenge-app
    app.kubernetes.io/version: "0.0.1"
    app.kubernetes.io/component: web
    app.kubernetes.io/part-of: techchallenge
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: techchallenge-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: techchallenge-app
        app.kubernetes.io/version: "0.0.1"
        app.kubernetes.io/component: web
        app.kubernetes.io/part-of: techchallenge
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: techchallenge-app
          image: caiohnrq16/techchallenge-12soat:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - "ALL"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 300
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
              httpHeaders:
                - name: Accept
                  value: application/json
            initialDelaySeconds: 300
            periodSeconds: 15
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "500m"
              memory: "2Gi"
